--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -23,7 +23,7 @@
 
 				</div>
 				
-				<div class='panel-body' ng-show="vm.commentsByDateVis">
+				<div class='panel-body' ng-show="vm.comments">
 					<label class="control-label">Comment Volume by Date</label>
 					<tmpl-public-project-comments-by-date x-refresh="vm.refreshVisualization" x-data="vm.commentsByDateVis"></tmpl-public-project-comments-by-date>
 				</div>
@@ -103,7 +103,7 @@
 			</div>
  -->
 
-			<nav class="navbar navbar-default navbar-sm" ng-init="vm.form.view = 'bydate'">
+			<nav class="navbar navbar-default navbar-sm" ng-init="vm.form.view = 'bydate'" ng-if="vm.comments">
 				<div class="container-fluid">
 
 					<ul class="nav navbar-nav navbar-form navbar-left">
@@ -240,8 +240,9 @@
 				</div>
 			</div> -->
 
-			<div ng-show="vm.commentsByDates.length === 0 && vm.form.view === 'bydate'">
+			<div ng-show="vm.comments && vm.form.view === 'bydate'">
 				<h3 class="text-info">No comments are available for this project yet.</h3>
+				<p>Please check back for information regarding upcoming Public Comment Periods</p>
 			</div>
 
 		</div>
