More things on the public page

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -262,8 +262,9 @@ th .progress-bar {
   padding-top: 1px;
   padding-left: 7px; }
 
-.concern-heading {
-  color: #f4f4f4; }
+.concern-heading,
+.concern-heading * {
+  color: #f4f4f4 !important; }
 
 .panel-project-summary h3 {
   margin-top: 2px; }
