--- a/modules/projects/client/views/projects-partials/projects-filter-bar.html
+++ b/modules/projects/client/views/projects-partials/projects-filter-bar.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-default navbar-sm">
 	<div class="container-fluid">
-		<div class="nav navbar-nav navbar-left navbar-form">
+		<div class="nav navbar-nav navbar-left navbar-form" x-user-is="admin, user">
 			<div class="form-group">	
 				<div class="btn-group btn-group-sm">
 					<button class="btn btn-default" ng-click="data.view = 'schedule'"	ng-class="{'btn-primary': fbc.data.view === 'schedule'}">Schedule</button>	
