--- a/modules/configuration/client/views/partials/manage-tasks.html
+++ b/modules/configuration/client/views/partials/manage-tasks.html
@@ -52,6 +52,9 @@
                         </select>
                     </div>
 
+                    <div class="form-group">
+                        <a href x-modal-permission-matrix x-target-object="configDataElement.activeRecord" x-target-object-type="task">Permissions</a>
+                    </div>
 
                     <div class="form-group" ng-if="configDataElement.activeRecordNew">
                         <button class="btn btn-primary" ng-click="configDataElement.addRecord()">Add</button>
