--- a/modules/activities/client/views/activity-partials/activity-list.html
+++ b/modules/activities/client/views/activity-partials/activity-list.html
@@ -1,5 +1,7 @@
 <panel-sort x-fields="actList.panelSort" x-data="actList.project.activities"></panel-sort>
 
-<section ng-repeat="act in actList.project.activities | filter:{'status':actList.activityFilterStatus}" >
-	<tmpl-activity-item x-activity="act" x-project="actList.project"></tmpl-activity-item>
+<section class="row">
+	<div ng-repeat="act in actList.project.activities | filter:{'status':actList.activityFilterStatus}" class="col-sm-6 col-md-4 col-lg-3">
+		<tmpl-activity-item x-activity="act" x-project="actList.project"></tmpl-activity-item>
+	</div>
 </section>
