--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -63,7 +63,7 @@
 
 
 
-<nav class="navbar navbar-fixed-top navbar-custom">
+<nav class="navbar navbar-custom">
     <div class="container-fluid">
 
       <div class="col-sm-9">
