--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -553,4 +553,12 @@ nav {
 .panel > .table.table-stacked {
   margin-bottom: 30px; }
 
+pre {
+  padding: 0;
+  margin: 0;
+  font-size: inherit;
+  line-height: inherit;
+  background-color: transparent;
+  border: 0; }
+
 /*# sourceMappingURL=core.css.map */
