--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -61,8 +61,6 @@
  -->
 
 
-
-
 <nav class="navbar navbar-custom">
     <div class="container-fluid">
 
@@ -78,9 +76,9 @@
 
       	<ul class="nav navbar-nav navbar-right">
       		<li class="text-right navbar-user" ng-show="header.authentication.user">
-      			<a ui-sref="user.profile">{{ header.authentication.user.name }}</a><br/>
+      			<a ui-sref="settings.profile">{{ header.authentication.user.name }}</a><br/>
       			<div class="small">
-      				<a x-modal-alerts-viewer class="text-danger" x-divider=true></a><a ui-sref="header.authentication.user.profile">Profile</a>&nbsp;|&nbsp;<a href="/api/auth/signout" target="_self">Logout</a>
+      				<a x-modal-alerts-viewer class="text-danger" x-divider=true></a><a ui-sref="settings.profile">Profile</a>&nbsp;|&nbsp;<a href="/api/auth/signout" target="_self">Logout</a>
       			</div>
       		</li>
           <li class="text-right navbar-user" ng-show="!header.authentication.user">
