--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -222,17 +222,19 @@ h3 .small .label {
 .label-list li,
 .panel-sort li {
 	display: inline-block;
+	white-space: nowrap;
 }
 .label-list li {
 	margin-bottom: 3px;
 	margin-right: 3px;
 }
+
 .panel-sort li {
 	font-size: 80%;
 	color: #fff;
 }
 .panel-sort li a {
-	padding: 0 5px;
+	padding: 0 5px 0 3px;
 	color: #fff;
 }
 .panel-sort li:before {
@@ -240,6 +242,10 @@ h3 .small .label {
 }
 .panel-sort li:first-child:before {
 	content: '';	
+}
+
+.panel-sort li a span:after {
+	content: '\0020';
 }
 
 .panel-sort li.asc a span:after {
@@ -250,9 +256,12 @@ h3 .small .label {
 	content: "\0020\25BC";
 }
 
+.text-dark .panel-sort li,
 .modal .panel-sort li {
 	color: #777;
 }
+
+.text-dark .panel-sort li a,
 .modal .panel-sort li a {
 	color: #777;
 }
@@ -615,7 +624,6 @@ nav {
 .project-info-panel .dl-vertical dt {
 	margin-top: 20px;
 	border-bottom: 1px solid #cccccc;
-
 }
 
 .no-wrap {
