--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -1,6 +1,14 @@
 <div class="modal-header">
 	<h3 class="modal-title">Contribute a Comment</h3>
 </div>
+<!-- 
+<div class="modal-body" ng-if="publicComment.sent">
+	<h3>Thank you for your comment</h3>
+	<label class="control-label">What happens next?</label>
+	<p>Within 7 days comment will be published to the public project record and then responded to by the proponent a short time later.</p>
+	<p>All published comments can be found in the lower section of this page.</p>
+</div> -->
+
 <div class="modal-body" ng-if="!publicComment.sent">
 	<div class="form-group">
 		<label for="publiccomment" class="control-label">Your Comment</label>
@@ -10,6 +18,11 @@
 		<label for="name" class="control-label">Your Name <em class="small">Optional</em></label>
 		<input type="input" id="name" class="form-control" ng-model="publicComment.data.author"/>
 	</div>
+	<div class="form-group">
+		<label for="location" class="control-label">Your Location <em class="small">Optional</em></label>
+		<input type="input" id="name" class="form-control" ng-model="publicComment.data.author"/>
+	</div>
+
 
 	<a href ng-click="publicComment.form.showDocuments = true" ng-show="!publicComment.form.showDocuments">Click here to upload documents and images.</a>
 	<div ng-show="publicComment.form.showDocuments">
