--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -8,7 +8,7 @@
 
 		<div class='col-sm-3'>
 			<div class="panel panel-default project-info-panel">
-				<div class='panel-body text-center'>
+<!-- 				<div class='panel-body text-center'>
 					<img src="http://ajaxmine.ca/wp-content/themes/wp-kghm/images/kghm-ajax-logo.png" style="padding: 20px 15px;" class="img-responsive">
 				</div>
 
@@ -18,12 +18,14 @@
 						<source src="http://ajaxmine.org/wp-content/themes/wp-kghm/video/KGHM.mp4" type="video/mp4">
 					</video>
 				</div>
-
+ -->
 				<div class='panel-heading'>
+					<div><label class="control-label">Name</label><p>{{ vm.project.name }}</p></div>
 					<div><label class="control-label">Location</label><p>{{ vm.project.location }}</p></div>
 					<div><label class="control-label">Region</label><p>{{ vm.project.region | titleCase }}</p></div>
 					<div><label class="control-label">Description</label><p>{{ vm.project.description }}</p></div>
-					<p ng-if="0"><small><a href><span class='glyphicon glyphicon-file'></span> Comprehensive Project Description</a></small></p>
+					<p><small><a href><span class='glyphicon glyphicon-file'></span> Comprehensive Project Description</a></small></p>
+					<p><small><a href><span class='glyphicon glyphicon-file'></span> Application</a></small></p>
 				</div>
 
 				<div class="location-map">
@@ -52,9 +54,9 @@
 
 				<div class="alert alert-info text-center">
 					<p>Public Comments Open from <strong>{{ vm.project.dateCommentsOpen | amDateFormat:'MMM Do, YYYY'}}</strong> to <strong>{{ vm.project.dateCommentsClosed | amDateFormat:'MMM Do, YYYY' }}</strong></p>
-					<hr>
+<!-- 					<hr>
 					<p class="lead"><small>Public Comment Period Ends In</small><countdown-clock x-end="vm.project.dateCommentsClosed"></countdown-clock></p>
-					<hr>
+ -->					<hr>
 					<a class="btn btn-default btn-block btn-lg" href x-modal-add-public-comment x-project="vm.project">Click here to Contribute a Comment</a>
 				</div>
 
@@ -115,30 +117,29 @@
 			</div>
  -->
 			<div class="concern-heading">
-	 			<hr>
 	 			<h3>Comments to Date</h3>
 	 		</div>
 
 			<nav class="navbar navbar-default navbar-sm" ng-init="vm.form.view = 'bydate'" ng-if="vm.comments.length !== 0">
 				<div class="container-fluid">
 
-					<ul class="nav navbar-nav navbar-form navbar-left" ng-if="0">
+					<ul class="nav navbar-nav navbar-form navbar-left">
 						<li>
 							<div class="btn-group btn-group-sm">
 								<button class="btn btn-default" ng-click="vm.form.view = 'bydate'"	ng-class="{'btn-primary': vm.form.view === 'bydate'}">By Date</button>
-<!-- 								<button class="btn btn-default" ng-click="vm.form.view = 'byvc'"	ng-class="{'btn-primary': vm.form.view === 'byvc'}">By Topic</button> -->
+								<button class="btn btn-default" ng-click="vm.form.view = 'byvc'"	ng-class="{'btn-primary': vm.form.view === 'byvc'}">By Topic</button>
 							</div>
 						</li>
 					</ul>
 
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<p class="navbar-text">Filter</p>
+							<p class="navbar-text">Keyword Search</p>
 						</li>
 						<li>
 							<form class="navbar-form" role="filter1">
 								<div class="form-group">
-									<input ng-model="vm.filterKeyword" type="text" class="form-control" placeholder="Filter">
+									<input ng-model="vm.filterKeyword" type="text" class="form-control" placeholder="">
 								</div>
 							</form>
 						</li>
