--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -57,7 +57,7 @@
 <!-- 					<hr>
 					<p class="lead"><small>Public Comment Period Ends In</small><countdown-clock x-end="vm.project.dateCommentsClosed"></countdown-clock></p>
  -->					<hr>
-					<a class="btn btn-default btn-block btn-lg" href x-modal-add-public-comment x-project="vm.project">Click here to Contribute a Comment</a>
+					<a class="btn btn-default btn-block btn-lg" href x-modal-add-public-comment x-project="vm.project">Click here to Comment on the Application</a>
 				</div>
 
 				<div class="concern-heading" ng-if="0">
